Add functions for create task div at dom and render projects

--- a/src/template.html
+++ b/src/template.html
@@ -12,10 +12,12 @@
 
         <section class="sidebar">
             <div class="user">
-                <a href="" rel="noopener npreferer"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 1.8rem;">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                  </svg>
-                   Motopia7
+                <a href="" rel="noopener npreferer"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 1.8rem;">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                    </svg>
+                    Motopia7
                 </a>
             </div>
             <div class="tag">
@@ -101,7 +103,29 @@
         </section>
 
         <main class="show">
+            <div class="project">
+                <h4>School</h4>
+                <div class="task">
+                    <div class="title">
+                        <input type="checkbox" class="task-checkbox">
+                        <p class="title-task">math exercise</p>
+                        <span class="priority"></span>
+                    </div>
+                    <p class="task-explain">do the math exersice</p>
+                    <p class="task-date">2024/02/09</p>
 
+                </div>
+                <div class="task">
+                    <div class="title">
+                        <input type="checkbox">
+                        <p class="title-task">math exercise</p>
+                        <span class="priority"></span>
+                    </div>
+                    <p class="task-explain">do the math exersice Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, aspernatur itaque? Consequatur vitae non dolorum ipsam nobis voluptatem minima amet. Incidunt in perspiciatis eveniet impedit magni et consequuntur illo vel!</p>
+                    <p class="date">2024/02/09</p>
+
+                </div>
+            </div>
         </main>
     </div>
 
