--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
 
 
 
-                <button>
+                <button class="tag-items">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -90,7 +90,7 @@
 
                     All
                 </button>
-                <button>
+                <button class="tag-items">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -98,7 +98,7 @@
                     </svg>
                     Today
                 </button>
-                <button>
+                <button class="tag-items">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -106,7 +106,7 @@
                     </svg>
                     Scheduled
                 </button>
-                <button>
+                <button class="tag-items">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -150,36 +150,12 @@
 
                     Add project
                 </button>
-                <button class="project-items">
-                    Home
-                </button>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-3">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M2.25 12.75V12A2.25 2.25 0 0 1 4.5 9.75h15A2.25 2.25 0 0 1 21.75 12v.75m-8.69-6.44-2.12-2.12a1.5 1.5 0 0 0-1.061-.44H4.5A2.25 2.25 0 0 0 2.25 6v12a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9a2.25 2.25 0 0 0-2.25-2.25h-5.379a1.5 1.5 0 0 1-1.06-.44Z" />
-                    </svg>
-                    Work
-                </button>
+    
             </div>
         </section>
 
         <main class="show">
-            <div class="project">
-                <h4>School</h4>
-                <div class="task">
-                    <div class="title">
-                        <label class="title-task">
-                            <input type="checkbox" class="task-checkbox">
-                            <p class="title-task-p">math</p>
-                        </label>
-                        <span class="priority"></span>
-                    </div>
-                    <p class="task-explain">do the math exersice</p>
-                    <p class="task-date">2024/02/09</p>
-
-                </div>
-            </div>
+            
         </main>
     </div>
 
