--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
 
 
 
-                <button class="tag-items">
+                <button class="tag-items" id="all-tag">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -90,7 +90,7 @@
 
                     All
                 </button>
-                <button class="tag-items">
+                <button class="tag-items" id="today-tag">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -98,7 +98,7 @@
                     </svg>
                     Today
                 </button>
-                <button class="tag-items">
+                <button class="tag-items" id="scheduled">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -106,7 +106,7 @@
                     </svg>
                     Scheduled
                 </button>
-                <button class="tag-items">
+                <button class="tag-items" id="completed-tag">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-3">
                         <path stroke-linecap="round" stroke-linejoin="round"
